noinst_LTLIBRARIES = libstack_httpclnt.la

libstack_httpclnt_la_CFLAGS = -I$(top_srcdir)/include               \
                                -I$(top_srcdir)/libs/stacks/rauthen \
                                -I$(top_srcdir)/libs/sdf            \
                                -I$(top_srcdir)/libs/codecs/urlencode

libstack_httpclnt_la_LIBADD = 

libstack_httpclnt_la_SOURCES = http_clnt.h http_clnt.c
